@@ -1,3 +1,10 @@
+2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int C] Use `shared' space for temporary filename templating.
+
+	* rcsfnms.c (set_temporary_file_name): Save `tmpdir' in `shared'.
+	Also use `shared' temporarily for template string.
+
 2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int C] Use `shared' space for filename arg normalization.
